applied style, added crowdsource, squashed bugs, home page text, responsive fixes, map search

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -33,6 +33,33 @@ footer { color: #ffffff; background-color: #6699CC; margin-top: 10px; padding-bo
 footer a { color: #ffffff; font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif; }
 footer a:hover, footer a:focus { color: #ffffff; text-decoration: underline; font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;}
 
+.footer-brand {
+  float: left;
+  padding-left: 15px;
+}
+.footer-nav {
+  padding: 8px 15px;
+}
+.footer-brand img {float: left; display:block;}
+.footer-brand span {
+  float: left;
+  display: block;
+  font-size: 11px;
+  color: #ffffff;
+  padding-left: 16px;
+}
+.footer-brand span.app-dev {
+  clear: left;
+  font-size: 13px;
+  padding-left: 60px;
+  margin-top: -13px;
+  color: #FFF!important;
+}
+.footer-brand span.app-name {
+  font-style: italic;
+}
+.footer-links { margin-top: 10px; }
+
 /* navs */
 .navbar-right { padding-top: 8px;}
 .navbar-right li a { color: #ffffff !important; }
@@ -48,28 +75,88 @@ footer a:hover, footer a:focus { color: #ffffff; text-decoration: underline; fon
 .navbar-toggle  { background-color: #ffffff !important; }
 .nav>li>a { padding: 8px; 8px; }
 
+/* color */
+.fda-blue { color: #00539B; }
+.fda-midtone { color: #6699CC; }
+.fda-tint { color: #99CCCC; }
+.fda-black { color: #323132; }
+.fda-accent1 { color: #CC6633; }
+.fda-accent2 { color: #A3C658; }
+.fda-accent3 { color: #E2C752; }
+.fda-accent4 { color: #993333; }
+.fda-blue-bg { background-color: #00539B; }
+.fda-midtone-bg { background-color: #6699CC; }
+.fda-tint-bg { background-color: #99CCCC; }
+.fda-black-bg { background-color: #323132; }
+.fda-accent1-bg { background-color: #CC6633; }
+.fda-accent2-bg { background-color: #A3C658; }
+.fda-accent3-bg { background-color: #E2C752; }
+.fda-accent4-bg { background-color: #993333; }
+
 /* form */
-form { position: relative; }
+
 .form-control, .form-control:focus { box-shadow: none; height: 36px; }
 .input-group { width: 100%; }
-.input-group .form-control:first-child { border-right: none; border-bottom: none; border-radius: 0; height: 36px; padding-right: 32px; }
-.form-control:focus { border-color: #CCC; }
+.input-group .form-control:first-child { border-right: none; border-radius: 0; height: 36px; padding-right: 32px; }
+.form-control:focus { border-color: #99CCCC; }
+.btn-default {height:36px;}
 
 filter-select { font-family: Arial,sans-serif; box-shadow: none; font-size: 12px; border: none;  }
 
 /* button */
-.btn-group .active { background-color: #013A58; }
-.input-group-btn button { background-color: #FFF; border-left: none; border-radius: 0; font-size: 17px; }
-.input-group-btn:last-child > .btn { border-bottom: 0; margin-left: 0; padding-bottom: 5px; }
+.input-group-btn button:hover { border-color: #6699CC; background: #fff;}
+.input-group-btn button:focus { border-color: #6699CC; background: #fff;}
+.input-group-btn button { background: #FFF; border-radius: 0;  }
+.input-group-btn:first-child > .btn { border-left: none; padding-bottom: 5px; }
+.input-group-btn:last-child > .btn { margin-left: 5px; padding-bottom: 5px; }
 .input-group .divider { border-left: 1px solid #CCCCCC; height: 25px; position: absolute; top: 6px; z-index: 9; }
 
 /* section */
 .panel { border: none; border-radius: 0; box-shadow: none; margin-bottom: 0; }
 .panel-body { padding: 5px 0; background-color: #eeeeef; }
 
+#filter-option {margin-top: 10px; margin-bottom: 6px; }
+
+.recall-status { font-size: 14px; font-weight:700; color: #000; margin-bottom: 0px;}
+.recall-dates { font-size: 14px; font-style:italic; color: #808284;}
+.recall-dates span { font-size: 14px; font-weight:600; }
+.recall-num { font-size: 18px; color: #000; font-family: Merriweather,'Helvetica Neue',Arial,sans-serif !important; }
+.recall-firm { font-size: 16px; font-weight: bold;  font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;}
+.recall-product { font-size: 12px;}
+.recall-reason { font-size: 12px; font-style: italic;}
+.recall-pop { font-size: 13px; }
+
+.text-div { min-height: 330px; width: 100%; padding: 0px; }
+#text-div-selected-scroll {overflow-y: auto; height: 136px;}
+#text-div-info {width: 100%; margin: 0 auto; margin-bottom: 3px;}
+#text-div-pop { width: 100%; color: #ffffff; padding: 3px; margin: 3px; }
+#text-div-pop-bg { background-color: #6699CC; margin: 3px -24px 3px -24px }
+#text-div-pop-in{ margin: 3px 24px 3px 24px }
+#text-div-pop-in hr {margin-top: 3px; margin-bottom: 3px; color: #ffffff; }
+
+#text-div-noresults { height: 100%; width: 100%; text-align: center; }
+.text-div-noresults-sorry { font-size: 20px; font-weight: bold; color: #CC6633; font-family: Merriweather,'Helvetica Neue',Arial,sans-serif !important; text-align: center; margin-top: 80px; }
+.text-div-noresults-help a {}
+
+#text-div-national p { font-size: 14px; color: #323132; font-family: Merriweather,'Helvetica Neue',Arial,sans-serif !important; margin-bottom: 10px; }
+#text-div-national p:first-of-type::first-letter { initial-letter: 3; color: red; }
+#text-div-national p.text-div-national-first:first-of-type::first-letter { initial-letter: 10; color: #00539B; float: left; font-size: 50px; line-height: 46px; padding-top: 4px; padding-right: 8px; padding-left: 3px;}
+
+
+#text-div-pop-title { font-size: 18px; color: #ffffff; font-family: Merriweather,'Helvetica Neue',Arial,sans-serif !important; text-align: center; margin-bottom: 4px;}
+
+.recall-crowd-text { font-style: italic;}
+
+.btn-crowd , .btn-crowd:hover, .btn-crowd:active, .btn-crowd:focus { background: #A3C658; color: #ffffff; font-weight: normal; width: 144px;   text-shadow: none;  font-size: 13px; font-family: Merriweather,'Helvetica Neue',Arial,sans-serif !important;}
+
+/*
+.btn-crowd { background: #A3C658; color: #ffffff; font-weight: normal; width: 70%;  display: table; text-shadow: none; margin: 0 auto; font-size: 16px; font-family: Merriweather,'Helvetica Neue',Arial,sans-serif !important;}
+.btn-crowd:hover, .btn-crowd:active, .btn-crowd:focus { background: #A3C658; color: #ffffff; font-weight: normal; width: 70%;  display: table; text-shadow: none; margin: 0 auto; font-size: 16px; font-family: Merriweather,'Helvetica Neue',Arial,sans-serif !important;}
+*/
+
 /* map */
-#map { height: 666px; }
-.map-container { position: relative; }
+#map { height: 640px; }
+.map-container { position: relative; margin-top:8px; }
 
 .btn-geo-current { border: 1px solid rgba(0, 0, 0, 0.4); border-radius: 3px; left: 10px; padding: 2px; position: absolute; top: 110px; z-index: 9; width: 28px; height: 26px; background: #ffffff; }
 .btn-geo-nation { border: 1px solid rgba(0, 0, 0, 0.4); border-radius: 3px; left: 10px; padding: 2px; position: absolute; top: 145px; z-index: 10; width: 28px; height: 26px; background: #ffffff; }
@@ -79,7 +166,7 @@ filter-select { font-family: Arial,sans-serif; box-shadow: none; font-size: 12px
 
 /** carousel **/
 
-.jcarousel-wrapper { width: 100%;}
+.jcarousel-wrapper { width: 100%; box-shadow: none; margin: 10px;}
 
 .jcarousel {
     position: relative;
@@ -143,6 +230,8 @@ filter-select { font-family: Arial,sans-serif; box-shadow: none; font-size: 12px
 	#map { height: 67vh; min-height: 200px; }
 	.col-full { padding-left: 0; padding-right: 0; }
 	.panel { margin-top: 20px; }
+	.nav_link  span { display: none;}
+	.nav_link  { display: none; font-size: 18px;}
 }
  @media (min-width: 992px) {
 
